unpackaged/main/default/objects/Order/fields/ApplyAdditionalDiscountLast__c.field-meta.xml
<CustomField>
    <fullName>ApplyAdditionalDiscountLast__c</fullName>
    <description>In order to have the correct price on the Order Products you will also need to create the same field named ApplyAdditionalDiscountLast__c on the Order object (as per the quote object)</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApplyAdditionalDiscountLast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>