unpackaged/main/default/objects/Order/fields/Auto_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Amendment?</label>
    <type>Checkbox</type>
</CustomField>