unpackaged/main/default/objects/Order/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>