unpackaged/main/default/objects/Order/fields/Increase_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Increase_Rate_Type__c</fullName>
    <label>Increase Rate Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>