unpackaged/main/default/objects/Order/fields/Invoice_Plan__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Plan</label>
    <referenceTo>blng__InvoicePlan__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>