unpackaged/main/default/objects/Order/fields/Invoiced_Pre_signing__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Pre_signing__c</fullName>
    <label>Invoiced Pre-signing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted then Invoiced</fullName>
                <default>true</default>
                <label>Contracted then Invoiced</label>
            </value>
            <value>
                <fullName>Invoiced without Contract</fullName>
            </value>
            <value>
                <fullName>Invoiced and Contracted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>