unpackaged/main/default/objects/Order/fields/Manual_Intervention_Completed__c.field-meta.xml
<CustomField>
    <fullName>Manual_Intervention_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User will select this field if the Rev Rec Intervention Required is completed.</description>
    <inlineHelpText>Confirm that the Rev Rec Intervention Required is completed.</inlineHelpText>
    <label>Rev Rec Intervention Completed</label>
    <type>Checkbox</type>
</CustomField>