unpackaged/main/default/objects/Order/fields/Opportunity_Custom_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Custom_ID__c</fullName>
    <description>Opportunity Custom ID</description>
    <formula>Opportunity.Opportunity_ID__c</formula>
    <label>Opportunity Custom ID</label>
    <type>Text</type>
</CustomField>