unpackaged/main/default/objects/Order/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>Opportunity owner full name</description>
    <formula>Opportunity.Owner.Full_Name__c</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>