unpackaged/main/default/objects/Order/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <description>Twin Field, Purchase order number replaces the standard PO number field.</description>
    <label>Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>