unpackaged/main/default/objects/Order/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <description>Shows Custom Quote number</description>
    <formula>SBQQ__Quote__r.Name</formula>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>