unpackaged/main/default/objects/Order/fields/RenewalReductions__c.field-meta.xml
<CustomField>
    <fullName>RenewalReductions__c</fullName>
    <label>RenewalReductions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>