unpackaged/main/default/objects/Order/fields/Rev_Rec_Intervention_Required__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Intervention_Required__c</fullName>
    <description>Autorenewal process will allow the invoice generation/scheduling process to start without needing any further approval if this is not selected.</description>
    <label>DELETE Rev Rec Intervention Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>