unpackaged/main/default/objects/Order/fields/Streamline_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Streamline_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Streamline Revenue</label>
    <type>Checkbox</type>
</CustomField>