unpackaged/main/default/objects/Order/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Module Swap</fullName>
            </value>
            <value>
                <fullName>Flip to SaaS</fullName>
            </value>
            <value>
                <fullName>Full Termination</fullName>
            </value>
            <value>
                <fullName>Settlement Revenue Adjustment</fullName>
            </value>
            <value>
                <fullName>Perpetual on Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>