unpackaged/main/default/objects/Order/fields/Update_Product_Count_BD_Selected__c.field-meta.xml
<CustomField>
    <fullName>Update_Product_Count_BD_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When amendment product count is higher than original product count, update the Product Count BD Selected field on the Service Contract.</description>
    <label>DEL Update Product Count BD Selected</label>
    <type>Checkbox</type>
</CustomField>