unpackaged/main/default/objects/Order/validationRules/AMS_Order_Start_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>AMS_Order_Start_validation</fullName>
    <active>true</active>
    <errorConditionFormula>EffectiveDate &lt;&gt;  AMS_Order__r.EffectiveDate</errorConditionFormula>
    <errorMessage>AMS Order start date must match this Order&#39;s start date.</errorMessage>
</ValidationRule>