unpackaged/main/default/objects/Order/validationRules/If_AMS_Order_and_Deal_type_is_not_SaaS.validationRule-meta.xml
<ValidationRule>
    <fullName>If_AMS_Order_and_Deal_type_is_not_SaaS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(AMS_Order__c)),
    SBQQ__Quote__r.Deal_Type__c &lt;&gt; &quot;Saas&quot;)</errorConditionFormula>
    <errorMessage>AMS Order can only be populated on an Order linked to a Quote with Deal Type of SaaS.</errorMessage>
</ValidationRule>